--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.0.2",
     "express-winston": "^4.2.0",
